--- a/inventory/intended/structured_configs/DC3-BORDER2-debug-vars.yml
+++ b/inventory/intended/structured_configs/DC3-BORDER2-debug-vars.yml
@@ -138,9 +138,6 @@ tenants:
     vrfs:
       CORP:
         vrf_vni: 10
-        vtep_diagnostic:
-          loopback: 10
-          loopback_ip_range: 10.255.10.0/24
         svis:
           10:
             name: CORP_GLOBAL
@@ -155,14 +152,31 @@ tenants:
             - compute
             - border
             enabled: true
-            ip_address_virtual: 10.10.11.1/24
-          90:
-            name: CORP_DC3
+            ip_address_virtual: 10.40.40.1/24
+          80:
+            name: CORP_DC3_NEW
             tags:
             - compute
             - border
             enabled: true
-            ip_address_virtual: 10.90.91.1/24
+            ip_address_virtual: 10.80.80.1/24
+        l3_interfaces:
+        - interfaces:
+          - Ethernet1
+          ip_addresses:
+          - 33.33.33.2/30
+          nodes:
+          - DC3-BORDER1
+          description: L3 Uplink to WAN for CORP VRF
+          enabled: true
+        - interfaces:
+          - Ethernet1
+          ip_addresses:
+          - 33.33.33.6/30
+          nodes:
+          - DC3-BORDER2
+          description: L3 Uplink to WAN for CORP VRF
+          enabled: true
 type: l3leaf
 l3leaf:
   defaults:
@@ -232,7 +246,7 @@ l3leaf:
           filter:
             tags:
             - compute
-    DC3_BORDER_LEAVES:
+    DC3_BORDER_LEAFS:
       bgp_as: 65316
       nodes:
         DC3-BORDER1:
@@ -259,7 +273,7 @@ inventory_hostname: DC3-BORDER2
 inventory_hostname_short: DC3-BORDER2
 group_names:
 - DC3
-- DC3_BORDER_LEAVES
+- DC3_BORDER_LEAFS
 - DC3_FABRIC
 - DC3_LEAVES
 - DC3_TENANT_NETWORKS
@@ -601,7 +615,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,90
+        vlans: 10,40,80
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.1
         igmp_snooping_enabled: true
@@ -802,7 +816,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,90
+        vlans: 10,40,80
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.2
         igmp_snooping_enabled: true
@@ -1003,7 +1017,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,90
+        vlans: 10,40,80
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.3
         igmp_snooping_enabled: true
@@ -1204,7 +1218,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,90
+        vlans: 10,40,80
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.4
         igmp_snooping_enabled: true
@@ -1353,7 +1367,7 @@ ansible_facts:
         interface_descriptions:
           python_module: ansible_collections.arista.avd.roles.eos_designs.python_modules.interface_descriptions
           python_class_name: AvdInterfaceDescriptions
-        group: DC3_BORDER_LEAVES
+        group: DC3_BORDER_LEAFS
         id: 127
         mgmt_ip: 10.99.99.219/24
         platform: cEOSLab
@@ -1392,7 +1406,7 @@ ansible_facts:
         - all
         filter_tags:
         - border
-        - DC3_BORDER_LEAVES
+        - DC3_BORDER_LEAFS
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:99
         trunk_groups:
@@ -1405,7 +1419,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,90
+        vlans: 10,40,80
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.127
         igmp_snooping_enabled: true
@@ -1554,7 +1568,7 @@ ansible_facts:
         interface_descriptions:
           python_module: ansible_collections.arista.avd.roles.eos_designs.python_modules.interface_descriptions
           python_class_name: AvdInterfaceDescriptions
-        group: DC3_BORDER_LEAVES
+        group: DC3_BORDER_LEAFS
         id: 128
         mgmt_ip: 10.99.99.220/24
         platform: cEOSLab
@@ -1593,7 +1607,7 @@ ansible_facts:
         - all
         filter_tags:
         - border
-        - DC3_BORDER_LEAVES
+        - DC3_BORDER_LEAFS
         filter_only_vlans_in_use: false
         virtual_router_mac_address: 00:1c:73:00:00:99
         trunk_groups:
@@ -1606,7 +1620,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,90
+        vlans: 10,40,80
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.128
         igmp_snooping_enabled: true
@@ -2094,7 +2108,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,90
+      vlans: 10,40,80
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.1
       igmp_snooping_enabled: true
@@ -2295,7 +2309,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,90
+      vlans: 10,40,80
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.2
       igmp_snooping_enabled: true
@@ -2496,7 +2510,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,90
+      vlans: 10,40,80
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.3
       igmp_snooping_enabled: true
@@ -2697,7 +2711,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,90
+      vlans: 10,40,80
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.4
       igmp_snooping_enabled: true
@@ -2846,7 +2860,7 @@ avd_switch_facts:
       interface_descriptions:
         python_module: ansible_collections.arista.avd.roles.eos_designs.python_modules.interface_descriptions
         python_class_name: AvdInterfaceDescriptions
-      group: DC3_BORDER_LEAVES
+      group: DC3_BORDER_LEAFS
       id: 127
       mgmt_ip: 10.99.99.219/24
       platform: cEOSLab
@@ -2885,7 +2899,7 @@ avd_switch_facts:
       - all
       filter_tags:
       - border
-      - DC3_BORDER_LEAVES
+      - DC3_BORDER_LEAFS
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:99
       trunk_groups:
@@ -2898,7 +2912,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,90
+      vlans: 10,40,80
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.127
       igmp_snooping_enabled: true
@@ -3047,7 +3061,7 @@ avd_switch_facts:
       interface_descriptions:
         python_module: ansible_collections.arista.avd.roles.eos_designs.python_modules.interface_descriptions
         python_class_name: AvdInterfaceDescriptions
-      group: DC3_BORDER_LEAVES
+      group: DC3_BORDER_LEAFS
       id: 128
       mgmt_ip: 10.99.99.220/24
       platform: cEOSLab
@@ -3086,7 +3100,7 @@ avd_switch_facts:
       - all
       filter_tags:
       - border
-      - DC3_BORDER_LEAVES
+      - DC3_BORDER_LEAFS
       filter_only_vlans_in_use: false
       virtual_router_mac_address: 00:1c:73:00:00:99
       trunk_groups:
@@ -3099,7 +3113,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,90
+      vlans: 10,40,80
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.128
       igmp_snooping_enabled: true
@@ -3278,7 +3292,7 @@ switch:
   interface_descriptions:
     python_module: ansible_collections.arista.avd.roles.eos_designs.python_modules.interface_descriptions
     python_class_name: AvdInterfaceDescriptions
-  group: DC3_BORDER_LEAVES
+  group: DC3_BORDER_LEAFS
   id: 128
   mgmt_ip: 10.99.99.220/24
   platform: cEOSLab
@@ -3317,7 +3331,7 @@ switch:
   - all
   filter_tags:
   - border
-  - DC3_BORDER_LEAVES
+  - DC3_BORDER_LEAFS
   filter_only_vlans_in_use: false
   virtual_router_mac_address: 00:1c:73:00:00:99
   trunk_groups:
@@ -3330,7 +3344,7 @@ switch:
   enable_trunk_groups: false
   local_endpoint_trunk_groups: []
   endpoint_trunk_groups: []
-  vlans: 10,40,90
+  vlans: 10,40,80
   spanning_tree_mode: mstp
   overlay_rd_type_admin_subfield: 10.3.103.128
   igmp_snooping_enabled: true
@@ -3502,7 +3516,7 @@ groups:
   DC3_LEAF_DOMAIN_2:
   - DC3-LEAF3
   - DC3-LEAF4
-  DC3_BORDER_LEAVES:
+  DC3_BORDER_LEAFS:
   - DC3-BORDER1
   - DC3-BORDER2
   DC3_TENANT_NETWORKS:
@@ -3517,7 +3531,7 @@ groups:
   - DC3-LEAF2
   - DC3-LEAF3
   - DC3-LEAF4
-omit: __omit_place_holder__2c92b5e9437d1609ed4595eb7953393fce2c41e3
+omit: __omit_place_holder__0234127a01e59eaac285306f68c4c0a4ffdbe26b
 ansible_version:
   string: 2.14.4
   full: 2.14.4
@@ -3531,5 +3545,5 @@ ansible_inventory_sources:
 - /workspaces/avd-demo/inventory/inventory.yml
 ansible_skip_tags: []
 ansible_run_tags:
-- provision
+- build
 ansible_verbosity: 0
