--- a/inventory/group_vars/DC3_TENANT_NETWORKS.yml
+++ b/inventory/group_vars/DC3_TENANT_NETWORKS.yml
@@ -12,9 +12,9 @@ tenants:
     vrfs:
       CORP:
         vrf_vni: 10
-        vtep_diagnostic:
-          loopback: 10
-          loopback_ip_range: 10.255.10.0/24
+        #vtep_diagnostic:
+        #  loopback: 10
+        #  loopback_ip_range: 10.255.10.0/24
         svis:
           10:
             name: CORP_GLOBAL
@@ -25,36 +25,23 @@ tenants:
             name: CORP_DC3
             tags: [compute,border]
             enabled: true
-            ip_address_virtual: 10.10.11.1/24
-          90:
-            name: CORP_DC3
+            ip_address_virtual: 10.40.40.1/24
+          80:
+            name: CORP_DC3_NEW
             tags: [compute,border]
             enabled: true
-            ip_address_virtual: 10.90.91.1/24
-#          19:
-#            name: Tenant_10_OP_Zone_FW
-#            tags: [border]
-#            enabled: true
-#            ip_virtual_router_addresses:
-#              - 10.10.19.1
-#            nodes:
-#              DC-BORDER1:
-#                ip_address: 10.10.19.2/24
-#              DC-BORDER2:
-#                ip_address: 10.10.19.3/24
-#        l3_interfaces:
-#          - interfaces: [ Ethernet51/1.110 ]
-#            encapsulation_dot1q_vlan: [ 110 ]
-#            ip_addresses: [ 192.168.110.0/31 ]
-#            nodes: [ DC-BORDER1 ]
-#            description: L3 Uplink to WAN for Tenant_10_OP_Zone VRF
-#            enabled: true
-#          - interfaces: [ Ethernet51/1.110 ]
-#            encapsulation_dot1q_vlan: [ 110 ]
-#            ip_addresses: [ 192.168.110.2/31 ]
-#            nodes: [ DC-BORDER2 ]
-#            description: L3 Uplink to WAN for Tenant_10_OP_Zone VRF
-#            enabled: true
+            ip_address_virtual: 10.80.80.1/24
+        l3_interfaces:
+          - interfaces: [ Ethernet1 ]
+            ip_addresses: [ 33.33.33.2/30 ]
+            nodes: [ DC3-BORDER1 ]
+            description: L3 Uplink to WAN for CORP VRF
+            enabled: true
+          - interfaces: [ Ethernet1 ]
+            ip_addresses: [ 33.33.33.6/30 ]
+            nodes: [ DC3-BORDER2 ]
+            description: L3 Uplink to WAN for CORP VRF
+            enabled: true
 #        static_routes:
 #          - destination_address_prefix: 0.0.0.0/0
 #            gateway: 192.168.110.1
@@ -94,6 +81,19 @@ tenants:
 #                ip_address: 10.10.18.2/24
 #              DC-BORDER2:
 #                ip_address: 10.10.18.3/24
+#        l3_interfaces:
+#          - interfaces: [ Ethernet51/1.110 ]
+#            encapsulation_dot1q_vlan: [ 110 ]
+#            ip_addresses: [ 192.168.110.0/31 ]
+#            nodes: [ DC-BORDER1 ]
+#            description: L3 Uplink to WAN for CORP VRF
+#            enabled: true
+#          - interfaces: [ Ethernet51/1.110 ]
+#            encapsulation_dot1q_vlan: [ 110 ]
+#            ip_addresses: [ 192.168.110.2/31 ]
+#            nodes: [ DC-BORDER2 ]
+#            description: L3 Uplink to WAN for CORP VRF
+#            enabled: true
 #    l2vlans:
 #      14:
 #        name: Tenant_10_VMOTION
