--- a/inventory/intended/configs/DC3-BORDER1.cfg
+++ b/inventory/intended/configs/DC3-BORDER1.cfg
@@ -69,8 +69,8 @@ vlan 10
 vlan 40
    name CORP_DC3
 !
-vlan 90
-   name CORP_DC3
+vlan 80
+   name CORP_DC3_NEW
 !
 vlan 3009
    name MLAG_iBGP_CORP
@@ -96,6 +96,13 @@ interface Port-Channel551
    switchport mode trunk
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
+!
+interface Ethernet1
+   description L3 Uplink to WAN for CORP VRF
+   no shutdown
+   no switchport
+   vrf CORP
+   ip address 33.33.33.2/30
 !
 interface Ethernet49/1
    description P2P_LINK_TO_DC3-SPINE1_Ethernet7/1
@@ -131,12 +138,6 @@ interface Loopback1
    no shutdown
    ip address 10.3.113.127/32
 !
-interface Loopback10
-   description CORP_VTEP_DIAGNOSTICS
-   no shutdown
-   vrf CORP
-   ip address 10.255.10.127/32
-!
 interface Management1
    description oob_management
    no shutdown
@@ -153,13 +154,13 @@ interface Vlan40
    description CORP_DC3
    no shutdown
    vrf CORP
-   ip address virtual 10.10.11.1/24
+   ip address virtual 10.40.40.1/24
 !
-interface Vlan90
-   description CORP_DC3
+interface Vlan80
+   description CORP_DC3_NEW
    no shutdown
    vrf CORP
-   ip address virtual 10.90.91.1/24
+   ip address virtual 10.80.80.1/24
 !
 interface Vlan3009
    description MLAG_PEER_L3_iBGP: vrf CORP
@@ -188,14 +189,12 @@ interface Vxlan1
    vxlan udp-port 4789
    vxlan vlan 10 vni 10010
    vxlan vlan 40 vni 10040
-   vxlan vlan 90 vni 10090
+   vxlan vlan 80 vni 10080
    vxlan vrf CORP vni 10
 !
 mac address-table aging-time 1300
 !
 ip virtual-router mac-address 00:1c:73:00:00:99
-!
-ip address virtual source-nat vrf CORP address 10.255.10.127
 !
 ip access-list standard SNMP-ACL
    10 permit 10.0.0.0/8
@@ -209,7 +208,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 20 permit 10.3.113.0/24 eq 32
 !
 mlag configuration
-   domain-id DC3_BORDER_LEAVES
+   domain-id DC3_BORDER_LEAFS
    local-interface Vlan4094
    peer-address 10.255.255.253
    peer-link Port-Channel551
@@ -279,9 +278,9 @@ router bgp 65316
       route-target both 10040:10040
       redistribute learned
    !
-   vlan 90
-      rd 10.3.103.127:10090
-      route-target both 10090:10090
+   vlan 80
+      rd 10.3.103.127:10080
+      route-target both 10080:10080
       redistribute learned
    !
    address-family evpn
